examples/test/testpolicy14684.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14684
  namespace: namespace278
spec:
  podSelector:
    matchLabels:
      key35: value38
      key23: value39
      key21: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value2
      podSelector:
        matchLabels:
          key25: value0
          key45: value12
